# crypto-orderbook-aggregator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
aggregator/: CMakeLists.txt  _concept_visit.md  _crtp.md  adapter_base.h  binance_adapter.cpp  binance_adapter.h  binance_book_printer.cpp  kraken_adapter.cpp  kraken_adapter.h  main.cpp  okx_adapter.cpp  okx_adapter.h
clients/bbo/: CMakeLists.txt  main.cpp
clients/price_bands/: CMakeLists.txt  main.cpp
clients/volume_bands/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt  bands.h  consolidator.h  order_book.h
docker/: Dockerfile.aggregator  Dockerfile.client  docker-compose.yml
proto/: bookfeed.proto
tests/: CMakeLists.txt  adapter_binance_test.cpp  adapter_kraken_test.cpp  adapter_okx_test.cpp  test_bbo.cpp  test_consolidator.cpp  test_order_book.cpp  test_price_bands.cpp  test_tick_alignment.cpp  test_volume_bands.cpp
